feat: adding service s3 to upload files

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,5 +17,6 @@ dependencies = [
     "starlette>=0.46.2",
     "tzdata>=2025.2",
     "uvicorn>=0.34.3",
-    "passlib[bcrypt]==1.7.4"
+    "passlib[bcrypt]==1.7.4",
+    "boto3>=1.38.45"
 ]
