feat: deploying infrastructure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./backend:/app
+      - ./backend:/code
     command: ["uv", "run", "uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     env_file:
       - .env
