--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,5 +17,6 @@ dependencies = [
     "tzdata>=2025.2",
     "uvicorn>=0.38.0",
     "passlib[bcrypt]==1.7.4",
+    "bcrypt>=3.2,<4.0",
     "boto3>=1.38.45"
 ]
